--- a/index.html
+++ b/index.html
@@ -461,7 +461,106 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-wrapper">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label">
+              <input class="subscribe-input" placeholder="E-mail" />
+            </label>
+            <button class="subscribe-button">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop" id="modal-backdrop">
+      <div class="modal">
+        <button class="modal-close" aria-label="Close modal">
+          <svg class="icon-modal-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-form-wrapper">
+            <label class="modal-label"> Name </label>
+            <div class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="name"
+                aria-label="name"
+                required
+              />
+              <svg class="icon-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-wrapper">
+            <label class="modal-label"> Phone </label>
+            <div class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="phone"
+                aria-label="phone"
+                required
+              />
+              <svg class="icon-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-wrapper">
+            <label class="modal-label"> Email </label>
+            <div class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="email"
+                aria-label="email"
+                required
+              />
+              <svg class="icon-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-textarea-wrapper">
+            <label class="modal-label"> Comment </label>
+            <textarea
+              class="modal-form-textarea"
+              name="comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-policy-wrapper">
+            <label class="modal-checkbox-wrapper">
+              <input
+                class="visually-hidden"
+                type="checkbox"
+                name="terms"
+                required
+              />
+              <span class="custom-checkbox">
+                <svg class="icon icon-checkbox" width="16" height="16">
+                  <use href="./images/icons.svg#icon-dede"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-privacy-policy">Privacy Policy</a>
+            </label>
+          </div>
+          <div class="modal-submit-button-wrapper">
+            <button type="submit" class="submit-button">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
