--- a/index.html
+++ b/index.html
@@ -465,9 +465,14 @@
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
             <label class="subscribe-label">
-              <input class="subscribe-input" placeholder="E-mail" />
+              <input
+                name="subscribe"
+                type="email"
+                class="subscribe-input"
+                placeholder="E-mail"
+              />
             </label>
-            <button class="subscribe-button">
+            <button type="submit" class="subscribe-button">
               Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
