--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
             />
             <label for="user-privacy" class="modal-checkbox-wrapper">
               <span class="custom-checkbox">
-                <svg class="icon icon-checkbox" width="10" height="8">
-                  <use href="./images/icons.svg#icon-dede"></use>
+                <svg class="icon-checkbox" width="10" height="8">
+                  <use href="./images/icons.svg#icon-close"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
