--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                 class="modal-form-input"
                 type="tel"
                 name="user-phone"
-                id="user-name"
+                id="user-phone"
                 aria-label="phone"
                 required
               />
@@ -530,7 +530,7 @@
                 class="modal-form-input"
                 type="email"
                 name="user-email"
-                id="user-name"
+                id="user-email"
                 aria-label="email"
                 required
               />
@@ -545,7 +545,6 @@
               id="user-comment"
               name="user-comment"
               class="modal-form-textarea"
-              name="comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -556,8 +555,6 @@
               value="true"
               name="user-privacy"
               class="visually-hidden"
-              type="checkbox"
-              name="terms"
               required
             />
             <label for="user-privacy" class="modal-checkbox-wrapper">
