--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <!-- MODAL -->
+    <div class="backdrop is-hidden">
       <div class="modal">
         <button type="button" class="modal-close" aria-label="Close modal">
           <svg class="icon-modal-close" width="8" height="8">
