--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
       </div>
     </footer>
     <!-- MODAL -->
-    <div class="backdrop is-hidden">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close" aria-label="Close modal">
           <svg class="icon-modal-close" width="8" height="8">
